--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@
 
 .banner-section{
     height:100vh;
-    background-image: url("/background.jpg"),linear-gradient(rgba(22, 20, 20, 0.9),rgba(135, 128, 128, 0.9));
+    background-image: url("/styles/background.jpg"),linear-gradient(rgba(22, 20, 20, 0.9),rgba(135, 128, 128, 0.9));
     background-blend-mode: overlay;
     background-position: center;
     background-repeat: no-repeat;
@@ -99,7 +99,7 @@
 }
 .service-container{
     display: flex;
-    background-image:url(/footer-bg.png),linear-gradient(hwb(0 7% 82% / 0.852)rgb(0,0,4));
+    background-image:url(/styles/footer-bg.png),linear-gradient(hwb(0 7% 82% / 0.852)rgb(0,0,4));
     background-size: cover;
     background-color: black;
     color: white;
